--- a/fl0w-backend/src/main/resources/application.properties
+++ b/fl0w-backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=fl0w-backend
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+server.port=8080
