--- a/fl0w-backend/src/main/resources/application.properties
+++ b/fl0w-backend/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=fl0w-backend
+
+# Database config
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# JPA config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=8080
+
+# Server config
+server.port=8000
